[package]
name = "live_trading_demo"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
env_logger.workspace = true
futures.workspace = true
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }
gpui_tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
url.workspace = true
