[package]
name = "mqtt_explorer_demo"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
bytes.workspace = true
chrono.workspace = true
env_logger.workspace = true
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }
gpui_tokio.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

rumqttc = "0.24"
